# rustybrain

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
rustybrain-core/: Cargo.toml
rustybrain-core/src/: colorpalette.rs  config.rs  lib.rs  md.rs
rustybrain-core/src/kasten/: mod.rs
rustybrain-core/src/zettel/: mod.rs
rustybrain-gtk/: Cargo.toml  build.rs
rustybrain-gtk/resources/: app.gresource.xml
rustybrain-gtk/src/: lib.rs
rustybrain-gtk/src/backlinks/: mod.rs
rustybrain-gtk/src/editor/: mod.rs  style.rs
rustybrain-gtk/src/editor/block/: anonymous.rs  codeblock.rs  emphasis.rs  headline.rs  link.rs  mod.rs
rustybrain-gtk/src/listview/: item.rs  mod.rs
rustybrain-gtk/src/msg/: mod.rs
rustybrain-gtk/src/search/: mod.rs
rustybrain-ui/: Cargo.toml
rustybrain-ui/src/: lib.rs  main.rs
src/: main.rs
