[package]
name = "rustybrain-gtk"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.1", package = "gtk4" }
gdk = { version = "0.4.1", package = "gdk4" }
relm4 = { version = "0.4", features = ["macros"] }
relm4-components = "0.4"
rustybrain-core = { path = "../rustybrain-core" }
gio = "0.16.0"

[build-dependencies]
gio = "0.16.0"
